// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`replace-field applies multiple replaces to obtain a cleaner schema 1`] = `
"type Query {
  books: [Book]
}

type Book {
  title: String!
  author: String!
  isAvailable: Boolean
}"
`;

exports[`replace-field should replace correctly field Type only 1`] = `
"type Query {
  books: [Book]
}

type Book {
  title: String!
  author: Author!
  code: String
}

type Author {
  name: String!
  age: Int!
}"
`;

exports[`replace-field should replace correctly field Type with additional type definitions 1`] = `
"type Query {
  books: [Book]
}

type Book {
  title: String!
  author: Author!
  code: String
}

type Author {
  name: String!
  age: String
}"
`;

exports[`replace-field should replace correctly mtultiple fields with hoistValue and defined resolver function as well as default-field-resolver 1`] = `
"type Query {
  books: [Book]
}

type Book {
  title: String!
  author: String!
  code: String
}"
`;

exports[`replace-field should replace correctly whole field config 1`] = `
"type Query {
  """Retrieve a list of Books"""
  books(maxResults: Int, orderBy: String): [Book]
}

type Book {
  title: String!
  author: Author!
  code: String
}

type Author {
  name: String!
  age: Int!
}"
`;
